--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,23 +1,52 @@
+/** -------------------------------------- plugins {...} --------------------------------------- **/
 plugins {
-    alias(libs.plugins.android.application)
-    alias(libs.plugins.jetbrains.kotlin.android)
+    id 'com.android.application'
+    id 'kotlin-android'
+    id 'kotlin-parcelize'
+    id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
-    namespace 'jimmytrivedi.in.android.tipcalculator'
-    compileSdk 34
+    namespace = getPackageName
+    compileSdk = getCompileAndTargetSdkVersion as int
 
     defaultConfig {
-        applicationId "jimmytrivedi.in.android.tipcalculator"
-        minSdk 26
-        targetSdk 34
-        versionCode 1
-        versionName "1.0"
+        applicationId = getPackageName
+        minSdk = getMinSdkVersion as int
+        targetSdk = getCompileAndTargetSdkVersion as int
+        versionCode = getVersionCode as int
+        versionName = getAppVersionName
+        vectorDrawables.useSupportLibrary = true
+    }
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        vectorDrawables {
-            useSupportLibrary true
-        }
+    compileOptions {
+        sourceCompatibility = getJvmTarget
+        targetCompatibility = getJvmTarget
+    }
+
+    kotlinOptions {
+        jvmTarget = getJvmTarget
+    }
+
+    buildFeatures {
+        viewBinding true
+        dataBinding true
+        buildConfig true    // To use custom BuildConfig fields
+    }
+
+    // Allow references to generated code
+    kapt {
+        correctErrorTypes true
+    }
+    lint {
+        abortOnError false
+        disable 'RestrictedApi'
+    }
+
+    packagingOptions {
+        resources.excludes.add('META-INF/*')
+        resources.excludes.add('readme')
     }
 
     buildTypes {
@@ -26,41 +55,69 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
-    buildFeatures {
-        compose true
-    }
-    composeOptions {
-        kotlinCompilerExtensionVersion '1.5.1'
-    }
-    packaging {
-        resources {
-            excludes += '/META-INF/{AL2.0,LGPL2.1}'
-        }
-    }
 }
 
-dependencies {
 
-    implementation libs.androidx.core.ktx
-    implementation libs.androidx.lifecycle.runtime.ktx
-    implementation libs.androidx.activity.compose
-    implementation platform(libs.androidx.compose.bom)
-    implementation libs.androidx.ui
-    implementation libs.androidx.ui.graphics
-    implementation libs.androidx.ui.tooling.preview
-    implementation libs.androidx.material3
-    testImplementation libs.junit
-    androidTestImplementation libs.androidx.junit
-    androidTestImplementation libs.androidx.espresso.core
-    androidTestImplementation platform(libs.androidx.compose.bom)
-    androidTestImplementation libs.androidx.ui.test.junit4
-    debugImplementation libs.androidx.ui.tooling
-    debugImplementation libs.androidx.ui.test.manifest
+/** ------------------------------------ dependencies {...} ------------------------------------ **/
+ dependencies {
+
+    def activityVersion = '1.8.2'
+    def annotationVersion = '1.7.1'
+    def appCompatVersion = '1.6.1'
+    def coreVersion = '1.12.0'
+    def fragmentVersion = '1.6.2'
+    def glideVersion = '4.16.0'
+    def hiltVersion = '2.51.1'
+    def lifecycleVersion = '2.7.0'
+    def materialVersion = '1.11.0'
+    def okHttpBomVersion = '4.12.0'
+    def retrofitVersion = '2.9.0'
+    def vectorDrawableVersion = '1.1.0'
+
+
+    /** --------------------------------------- Android --------------------------------------- **/
+    implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
+    implementation "androidx.annotation:annotation:$annotationVersion"
+    implementation "androidx.appcompat:appcompat:$appCompatVersion"
+    implementation "androidx.core:core-ktx:$coreVersion"
+
+    implementation "androidx.activity:activity-ktx:$activityVersion"
+    implementation "androidx.fragment:fragment-ktx:$fragmentVersion"
+
+    // Vector drawable
+    implementation "androidx.vectordrawable:vectordrawable:$vectorDrawableVersion"
+    implementation "androidx.vectordrawable:vectordrawable-animated:$vectorDrawableVersion"
+
+    // Lifecycle
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-runtime-compose:$lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-process:$lifecycleVersion"
+
+
+
+    /** ---------------------------------------- Google ---------------------------------------- **/
+    implementation "com.google.android.material:material:$materialVersion"
+
+    // Hilt
+    implementation "com.google.dagger:hilt-android:$hiltVersion"
+    kapt "com.google.dagger:hilt-android-compiler:$hiltVersion"
+
+
+    /** ------------------------------------ 3rd party SDKs ------------------------------------ **/
+
+    // Glide
+    implementation "com.github.bumptech.glide:glide:$glideVersion"
+    kapt "com.github.bumptech.glide:compiler:$glideVersion"
+
+    // Retrofit + GSON
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+
+    // OkHttp
+    implementation platform("com.squareup.okhttp3:okhttp-bom:$okHttpBomVersion")
+    implementation 'com.squareup.okhttp3:okhttp'
+    implementation 'com.squareup.okhttp3:logging-interceptor'
 }
