--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,18 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+/** --------------------------- buildscript {...} --------------------------- **/
+buildscript {
+    dependencies {
+        def gradleVersion = '8.3.0'
+
+        classpath "com.android.tools.build:gradle:$gradleVersion"
+    }
+}
+
+
+
+/** --------------------------- plugins {...} --------------------------- **/
 plugins {
-alias(libs.plugins.android.application) apply false
-    alias(libs.plugins.jetbrains.kotlin.android) apply false
+    id 'com.android.application' version '8.4.0' apply false
+    id 'com.android.library' version '8.4.0' apply false
+    id 'org.jetbrains.kotlin.android' version '2.0.0' apply false
+    id 'com.google.dagger.hilt.android' version '2.51.1' apply false // Same as hiltVersion
 }
