--- a/settings.gradle
+++ b/settings.gradle
@@ -1,23 +1,34 @@
+/** --------------------------- pluginManagement {...} --------------------------- **/
 pluginManagement {
     repositories {
-        google {
-            content {
-                includeGroupByRegex("com\\.android.*")
-                includeGroupByRegex("com\\.google.*")
-                includeGroupByRegex("androidx.*")
-            }
-        }
-        mavenCentral()
         gradlePluginPortal()
-    }
-}
-dependencyResolutionManagement {
-    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
-    repositories {
         google()
         mavenCentral()
     }
 }
 
+
+
+/** --------------------------- dependencyResolutionManagement {...} --------------------------- **/
+dependencyResolutionManagement {
+    repositories {
+        /**
+         * Below this google() & mavenCentral() is required, otherwise everytime when we run app, few dependencies gets downloaded, which
+         * is time consuming process
+         * Also this is recommended by many 3rd party SDKs
+         **/
+        google()
+        mavenCentral()
+
+        /** ------- Explicitly allowed redirected URLs mentioned below in maven{...} -------**/
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+        /** -------------------------------------------------------------------------------- **/
+    }
+}
+
+
+/** --------------------------- include {...} --------------------------- **/
 rootProject.name = "Tip Calculator"
 include ':app'
