- Basic functionality is working fine

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
 
         <!-- .................................ACTIVITY................................. -->
         <activity
-            android:name=".main.activity.HomeActivity"
+            android:name=".main.HomeActivity"
             android:exported="true"
             android:theme="@style/Theme.TipCalculator">
             <intent-filter>
